Working sketchpad, no features

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 			<link rel="stylesheet" href="layout.css" type="text/css">
 			<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 			<script src="script.js" type="text/javascript" charset="utf-8"></script>
-<	/head>
+	</head>
 	<body>
-		<div id="container">
-			
-		</div>
+		<div id="container"></div>
+		<div class="grid"></div>
 	</body>
 </html>
