--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 			<script src="script.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-		<div id="container"></div>
-		<div class="grid"></div>
+		<div id="wrapper">
+		
+			<div class="button">
+				<button name="new">New Grid</button>
+			</div>
+			
+			<div id="container"></div>
+			<div class="grid"></div>
+		</div>
 	</body>
 </html>
